<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.carlog.gilberto.carlog.activity.aceite">

            <TextView
                android:text="Introduzca tipo de aceite:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:id="@+id/txt_tipo_aceite" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmb_tipos_aceite"
                android:layout_below="@+id/txt_tipo_aceite"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <TextView
                android:text="@string/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:id="@+id/txt_f_aceite" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:layout_marginLeft="50dp"
                android:id="@+id/txt_fecha_aceite" />

            <com.melnykov.fab.FloatingActionButton
                android:id="@+id/button_modif_aceite"
                android:layout_marginTop="133dp"
                android:layout_marginLeft="140dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_gravity="left|top"
                app:fab_colorNormal="@color/ColorPrimary"
                android:padding="7dp"
                fab:fab_type="mini"
                android:layout_weight="1"
                android:src="@drawable/ic_itv"
                app:fab_colorPressed="@color/ColorPrimaryDark" />




            <com.gc.materialdesign.views.ButtonRectangle
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/guardar_aceite"
                android:background="#1E88E5"
                android:layout_below="@+id/button_modif_aceite"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp" />

            <TextView
                android:text="@string/mineralesList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="300dp"
                android:id="@+id/txt_mineralesList"/>

            <TextView
                android:text="@string/semisinteticosList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="320dp"
                android:id="@+id/txt_semisinteticosList"/>

            <TextView
                android:text="@string/sinteticosList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="340dp"
                android:id="@+id/txt_sinteticosList"/>

            <TextView
                android:text="@string/longlifeList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="360dp"
                android:id="@+id/txt_longlifeList"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
