<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.carlog.gilberto.carlog.activity.modificarCorrea">

        <TextView
            android:text="@string/introduzcatipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/txt_tipo_correa" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cmb_tipos_correa"
            android:layout_below="@+id/txt_tipo_correa"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:text="@string/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:id="@+id/txt_f_correa" />


        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="50dp"
            android:id="@+id/txt_fecha_correa" />

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/button_modif_correa"
            android:layout_marginTop="133dp"
            android:layout_marginLeft="140dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:layout_gravity="left|top"
            app:fab_colorNormal="@color/ColorPrimary"
            android:padding="7dp"
            fab:fab_type="mini"
            android:layout_weight="1"
            android:src="@drawable/ic_itv"
            app:fab_colorPressed="@color/ColorPrimaryDark" />


        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:text="@string/guardar"
            android:id="@+id/guardar_correa"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="181dp" />


    </RelativeLayout>
</RelativeLayout>